# Impact-Tutoring-Website

./: package-lock.json  package.json
backend/: .env.template  .gitignore  app.py  config.py  gmail.py  init_db.py  package.json  pyproject.toml  requirements.txt  utils.py
backend/sql/: create_tables.sql  drop_tables_data.sql  test_data.sql  tutor_tutees_test_data.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  CustomRoutes.jsx  UserContext.js  axios.js  index.js
frontend/src/components/: CommitmentCard.jsx  DashboardSidebar.jsx  Editor.jsx  Footer.jsx  Navbar.jsx  OldEditor.jsx  TuteeCard.jsx  TutoringHistory.jsx  UpcomingSessionCard.jsx  WhoWeAre.jsx
frontend/src/hooks/: useUser.js
frontend/src/other/: ConfirmSignupEmail.html  UserContext.js
frontend/src/pages/: ApplicationStatusPage.jsx  ConfirmSignupPage.jsx  Dashboard.jsx  EditorPage.jsx  HomePage.jsx  LandingPage.jsx  LogInPage.jsx  LogOutPage.jsx  MyCommitmentsPage.jsx  MyTuteesPage.jsx  PairingsPage.jsx  PendingVolunteerHoursApprovalsPage.jsx  ProfilePage.jsx  ResourcesPage.jsx  SignUpPage.jsx  Tiptap.jsx  TuteeInformationPage.jsx  TuteeProfile.jsx  TuteeSignupInformation.jsx  TuteesPage.jsx  TutorApplication.jsx  TutorApplicationPage.jsx  TutorInformationPage.jsx  TutoringHistoryPage.jsx  TutorsPage.jsx  UpcomingSessionsPage.jsx  VerifySignupPage.jsx  VolunteerHoursApprovalPage.jsx  VolunteerHoursPage.jsx  (+1 more)
src/: App.css  App.js
src/components/: Banner.jsx  CallToAction.jsx  Navbar.jsx  WhatWeDo.jsx  WhoWeAre.jsx
(+6 files in other folders)
