[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-session = "^0.8.0"
flask-cors = "^4.0.1"
boto3 = "^1.34.153"
jwt = "^1.3.1"
flask-mail = "^0.10.0"
black = "^24.8.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
google-api-python-client = "^2.139.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
